First Migration Update

--- a/Back/src/BorisEventos.API/appsettings.Development.json
+++ b/Back/src/BorisEventos.API/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "Default": "Data Source=DESKTOP-8OK7LBP\\SQLEXPRESS;Initial Catalog=BorisEventosDB;Trusted_Connection=True;"
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
